# genandroidmk_rs_apk

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bensadiku/testapk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-jnicallback.c  test_gen.c
app/src/main/java/com/bensadiku/testapk/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bensadiku/testapk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
